--- a/thesis-template-3-pz.tex
+++ b/thesis-template-3-pz.tex
@@ -12,7 +12,7 @@
 
 % Для вставки бланка титульного листа из PDF-файла
 \includepdf[pages={-}, offset=0mm -0mm]{title/TITUL.pdf}
-
+\setlength{\parindent}{1.25cm}
 %\clearpage
 %% Тут включается лист с подписями для ВКР
 %\includepdf[pages={-}, offset=0mm -0mm]{title/title-dep22.pdf}
